Fixed alignment

--- a/css/base.css
+++ b/css/base.css
@@ -52,7 +52,6 @@ body:before {
 .wrapper {
     width: 100%;
     bottom: 10vh;
-    height: 55vh;
     overflow: hidden;
 }
 .app-container {
@@ -68,6 +67,13 @@ body:before {
 
 /*--------- Responsive CSS ---------
 --------------------------------- */
+
+@media only screen and (max-width: 1399px) {
+
+.app-container{
+    width: 90%;
+}
+}
 
 @media only screen and (max-width: 960px) {
     body {
