--- a/css/data.css
+++ b/css/data.css
@@ -5,8 +5,8 @@
     font-size: 1.0rem;
     color: #fff;
     font-weight: bold;
-    margin: 20px auto 0px auto;
-    text-align: left;
+    margin: 20px auto 20px auto;
+    text-align: center;
     opacity: 0.8;
     position: relative;
 }
@@ -31,7 +31,7 @@
     font-size: 1.0rem;
     color: #fff;
     font-weight: bold;
-    margin: 20px auto -16px auto;
+    margin: 0px auto -16px auto;
     text-align: center;
     opacity: 0.8;
     clear: both;
