--- a/css/footer.css
+++ b/css/footer.css
@@ -15,7 +15,7 @@ footer {
 footer a,
 footer a:visited {
     text-decoration: none;
-    color: rgba(34, 32, 51, 0.8);
+    opacity: 0.4;
 }
 footer a:hover {
     color: #F62459;
