--- a/css/left-styles.css
+++ b/css/left-styles.css
@@ -8,7 +8,7 @@
     /*background: linear-gradient(to top, #2C3E50 , #FD746C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
     font-weight: normal;
-    height: 55vh;
+    min-height: 55vh;
     width: 25%;
     flex: 1 0 auto;
     float: left;
@@ -20,15 +20,14 @@
     font-size: 7.5rem;
     width: 70%;
     text-align: center;
-    margin-right: 0px;
-    margin-left: auto;
+    margin: auto;
     color: #fff;
     position: relative;
     font-weight: 300;
 }
 #hi-low-temp-wrapper-left {
     font-size: 1.5rem;
-    width: 60%;
+    width: 100%;
     text-align: center;
     margin: -20px auto;
 }
